Update map branch (#80)
* Fix NPE when a non-existent player has a home being purged

* Implemented blindness on countdown feature

* Add use-plugin-borders config option

* Description of blindness option has been worded better (you're welcome <3) and removal of an unnecessary line of code.

* Fix CME in CommandManager - make all command changes when finished

* Bump to v5.6

* Fixed teleportation not being stopped when moving along the Z-axis

* Initial commit

* Fix IllegalArgumentException, use GZIP compression

* Added fallback death management options

* STOP throwing errors you fool

* Update CM (#75)

* Update CM

* Add ATConfig, whoops

* I've fixed AdvancedTeleport

probably not though

* And lastly bump the version

* Don't load a config twice

* What have I done

* Fix the war crimes I might've committed on accident

* Fix permissions not applying on 1.8.x as per usual

* Bump version

* Update README.md

* Feature: Improved RTP min and max coords + per world settings + claim plugin hooks (#76)

* Feature: Improved RTP min and max coords + per world settings

* refactor: Implement a cache for the world values

* fix: Clear the coordCache on reload

* chore: Add note in config file about reuse of coords

* feat: Implement Claim plugin support and some other improvements

* fix: Forgot to add the config values to the config thingy + better name for the claim protection

* chore: Add config value and comment for claim protection

* refactor: Remove isTrusted method

* refactor: Use a double array from the begining

* fix: Actually add the config defaults

* fix: Fix lands not being Lands!

* fix: Fix bounds issue order is max, min not min, max in the config

* refactor: Check one last time if the chunks claimed state has changed.

* fix: Fix essentials being uniquely silly

* Update plugin.yml

* Add the metadata table (#79)

* /spawn logic fixes

* Back to fixing /tpoffl ever