@@ -1,22 +1,29 @@
 package io.github.niestrat99.advancedteleport.managers;
 
 import io.github.niestrat99.advancedteleport.hooks.BorderPlugin;
+import io.github.niestrat99.advancedteleport.hooks.ClaimPlugin;
 import io.github.niestrat99.advancedteleport.hooks.ImportExportPlugin;
 import io.github.niestrat99.advancedteleport.hooks.MapPlugin;
 import io.github.niestrat99.advancedteleport.hooks.borders.ChunkyBorderHook;
 import io.github.niestrat99.advancedteleport.hooks.borders.VanillaBorderHook;
 import io.github.niestrat99.advancedteleport.hooks.borders.WorldBorderHook;
+import io.github.niestrat99.advancedteleport.hooks.claims.GriefPreventionClaimHook;
+import io.github.niestrat99.advancedteleport.hooks.claims.LandsClaimHook;
+import io.github.niestrat99.advancedteleport.hooks.claims.WorldGuardClaimHook;
 import io.github.niestrat99.advancedteleport.hooks.imports.EssentialsHook;
+import org.bukkit.Location;
 import io.github.niestrat99.advancedteleport.hooks.maps.SquaremapHook;
 import io.github.niestrat99.advancedteleport.utilities.RandomCoords;
 import org.bukkit.World;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 
 public class PluginHookManager {
 
     private HashMap<String, ImportExportPlugin> importPlugins;
     private HashMap<String, BorderPlugin> borderPlugins;
+    private HashMap<String, ClaimPlugin> claimPlugins;
     private HashMap<String, MapPlugin> mapPlugins;
     private static PluginHookManager instance;
 
@@ -28,13 +35,21 @@ public class PluginHookManager {
     public void init() {
         importPlugins = new HashMap<>();
         borderPlugins = new HashMap<>();
+        claimPlugins = new HashMap<>();
         mapPlugins = new HashMap<>();
 
-        loadImportPlugin("essentials", EssentialsHook.class);
+        // Import plugins
+        loadPlugin(importPlugins, "essentials", EssentialsHook.class);
 
+        // World border Plugins
         loadBorderPlugin("worldborder", WorldBorderHook.class);
         loadBorderPlugin("chunkyborder", ChunkyBorderHook.class);
         loadBorderPlugin("vanilla", VanillaBorderHook.class);
+
+        // Claim Plugins
+        loadPlugin(claimPlugins, "worldguard", WorldGuardClaimHook.class);
+        loadPlugin(claimPlugins, "lands", LandsClaimHook.class);
+        loadPlugin(claimPlugins, "griefprevention", GriefPreventionClaimHook.class);
 
         loadMapPlugin("pl3xmap", SquaremapHook.class);
 
@@ -55,23 +70,12 @@ public class PluginHookManager {
         return importPlugins.get(name);
     }
 
-    private void loadImportPlugin(String name, Class<? extends ImportExportPlugin> clazz) {
+    private <T> void loadPlugin(HashMap<String, T> map, String name, Class<? extends T> clazz) {
         try {
-            importPlugins.put(name, clazz.newInstance());
-        } catch (InstantiationException | IllegalAccessException e) {
+            map.put(name, clazz.getConstructor().newInstance());
+        } catch (InstantiationException | NoSuchMethodException | InvocationTargetException | IllegalAccessException e) {
             e.printStackTrace();
-        } catch (NoClassDefFoundError ignored) {
-
-        }
-    }
-
-    private void loadBorderPlugin(String name, Class<? extends BorderPlugin> clazz) {
-        try {
-            borderPlugins.put(name, clazz.newInstance());
-        } catch (InstantiationException | IllegalAccessException e) {
-            e.printStackTrace();
-        } catch (NoClassDefFoundError ignored) {
-
+        } catch (NoClassDefFoundError ignored) { // Why are you like this essentials?
         }
     }
 
@@ -88,11 +92,16 @@ public class PluginHookManager {
     public double[] getRandomCoords(World world) {
         for (BorderPlugin plugin : borderPlugins.values()) {
             if (!plugin.canUse(world)) continue;
-            return new double[]{
-                    RandomCoords.getRandomCoords(plugin.getMinX(world), plugin.getMaxX(world)),
-                    RandomCoords.getRandomCoords(plugin.getMinZ(world), plugin.getMaxZ(world))
-            };
+            return new double[]{plugin.getMinX(world), plugin.getMaxX(world), plugin.getMinZ(world), plugin.getMaxZ(world)};
         }
         return null;
+    }
+
+    public boolean isClaimed(Location location) {
+        for (ClaimPlugin plugin : claimPlugins.values()) {
+            if (!plugin.canUse(location.getWorld())) continue;
+            return plugin.isClaimed(location);
+        }
+        return false;
     }
 }
